K8S/patient-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: patient-srv
spec:
    type: NodePort
    selector:
        app: patientservice
    ports:
        - name: patient
          protocol: TCP
          port: 80
          targetPort: 80
