K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: 
    - host: zhivkopetkov.com
      http:
        paths:
          - path: /api/people
            pathType: Prefix
            backend:
              service:
                name: patientservice-clusterip-srv
                port:
                  number: 80
          - path: /api/vaccine
            pathType: Prefix
            backend:
              service:
                name: vaccineservice-clusterip-srv
                port:
                  number: 80
          - path: /api/patient
            pathType: Prefix
            backend:
              service:
                name: vaccineservice-clusterip-srv
                port:
                  number: 80
